force-app/main/default/objects/Round_Robin_Filter__c/Round_Robin_Filter__c.object-meta.xml
<CustomObject>
    <description>Stores dynamic filter criteria for Round Robin matching. Each record represents one field-value filter condition.</description>
    <label>Round Robin Filter</label>
    <nameField>
        <displayFormat>RRF-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>