force-app/main/default/objects/Round_Robin_Filter__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <description>Display name for lookup/reference field values. Stores the record Name so users see a readable label instead of the raw ID.</description>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>