force-app/main/default/objects/Round_Robin_Filter__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API name of the Lead field used for matching (e.g. Project__c, Zone__c, Lead_Source__c)</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>