force-app/main/default/objects/Round_Robin_Filter__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display label of the Lead field for UI display</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>