force-app/main/default/objects/Round_Robin_Filter__c/fields/Field_Priority__c.field-meta.xml
<CustomField>
    <fullName>Field_Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Universal weight for this filter field, auto-populated from Round_Robin_Field_Priority__c master</description>
    <label>Field Priority</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>