force-app/main/default/objects/Round_Robin_Filter__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The Salesforce field type (PICKLIST, REFERENCE, STRING, etc.) for UI rendering</description>
    <label>Field Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>