force-app/main/default/objects/Round_Robin_Filter__c/fields/Preference_Order__c.field-meta.xml
<CustomField>
    <fullName>Preference_Order__c</fullName>
    <description>Priority order of this filter criterion. Lower number = higher priority.</description>
    <label>Preference Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>